# rl-emergent-comm

./: .gitignore  EGG walkthrough with a MNIST autoencoder.ipynb  custom_minigrid_env.py  hello.py  minigrid_reinforce_rnn.py  pyproject.toml  sb3_minigrid.py  slurm-31044597.out  slurm-31235571.out  slurm-31345209.out  slurm-31345210.out  slurm-filtered.out  train_discrete_comm.py  train_minigrid.py  train_minigrid_comm.py
compo_vs_generalization/: train.py
compositional_efficiency/: archs.py  continuous.py  discrete.py
scripts/: comm.sh  comm2.sh  filter_slurm_out.py  minigrid.sh  minigrid_comm.sh  minigrid_nocomm.sh  plot_acc.py
